deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suppline
  labels:
    app: suppline
