deploy/kubernetes/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daimoniac/suppline-ui
  namespace: daimoniac/suppline
  labels:
    app: daimoniac/suppline-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: daimoniac/suppline-ui
